# my-wordle-solver

./: README.md  entropy_soln.py  letter_freq.py  pyproject.toml  word_entropy_initial.json
data/: word_entropy_initial.json
src/my-wordle-solver/: entropy_soln.py  letter_freq.py
src/my_wordle_solver/: __init__.py  __main__.py  entropy_soln.py  letter_freq.py  solver.py
src/utilities/: common.py  constants.py
